[package]
name = "kak-buffercraft"
version = "0.0.1"
authors = ["Michael Davis"]
license = "MIT"
repository = "https://github.com/the-mikedavis/buffercraft.kak"
keywords = ["kakoune"]
categories = ["command-line-utilities"]

[package.metadata.nix]
build = true
app = true

[[bin]]
name = "kak-buffercraft"
path = "src/main.rs"

[dependencies]
regex = "1"

[dependencies.tera]
version = "1"
default-features = false
